<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryVariant"
        tools:context=".Sign_up">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_main"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_sec"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="401dp"
            android:layout_height="66dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/fil_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:gravity="center"
            android:hint="@string/full_name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/imageView1"
            app:layout_constraintEnd_toEndOf="@id/imageView1"
            app:layout_constraintStart_toStartOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="@+id/imageView1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="401dp"
            android:layout_height="66dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/fil_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        <EditText
            android:id="@+id/email"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="401dp"
            android:layout_height="66dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/fil_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="401dp"
            android:layout_height="66dp"
            android:layout_marginTop="14dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/fil_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/conPassword"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#00FFFFFF"
            android:gravity="center"
            android:hint="@string/con_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <Button
            android:id="@+id/btnHaveAc"
            android:layout_width="169dp"
            android:layout_height="27dp"
            android:layout_marginEnd="32dp"
            android:background="#0000"
            android:fontFamily="@font/font_sec"
            android:padding="0dp"
            android:text="@string/have_ac"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="234dp"
            android:layout_height="106dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/btn_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHaveAc"
            app:layout_constraintVertical_bias="0.342" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="173dp"
            android:layout_height="57dp"
            android:background="@drawable/round_btn"
            android:fontFamily="@font/font_sec"
            android:onClick="registrationUser"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/font_main"
            android:text="@string/creator"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
