<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant"
    tools:context=".Sign_in">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/font_main"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_sec"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="401dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/fil_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="401dp"
        android:layout_height="66dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/fil_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnHaveAc"
        android:layout_width="119dp"
        android:layout_height="27dp"
        android:background="#0000"
        android:fontFamily="@font/font_sec"
        android:padding="0dp"
        android:text="@string/forgetPassword"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="214dp"
        android:layout_height="108dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/btn_round"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/font_sec"
        android:onClick="registrationUser"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="214dp"
        android:layout_height="108dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/btn_round"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/font_sec"
        android:onClick="registrationUser"
        android:text="@string/signIn"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/GoogleSignInIng"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/g_icon"
        app:layout_constraintEnd_toEndOf="@+id/btnHaveAc"
        app:layout_constraintStart_toStartOf="@+id/btnHaveAc"
        app:layout_constraintTop_toBottomOf="@+id/btnHaveAc" />

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/font_sec"
        android:onClick="registrationUser"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/GoogleSignInIng"
        app:layout_constraintEnd_toEndOf="@+id/GoogleSignInIng"
        app:layout_constraintStart_toStartOf="@+id/GoogleSignInIng"
        app:layout_constraintTop_toTopOf="@+id/GoogleSignInIng" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/font_main"
        android:text="@string/creator"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignInButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>